# syntherela

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  INSTALLATION.md  LICENSE  README.md  neki.ipynb  pyproject.toml  requirements.txt  run_all_experiments.sh  setup.py
docs/: ADDING_A_METRIC.md  INSTALLATION.md  REPLICATING_RESULTS.md  SYNTHETIC_DATA_TOOLS.md
experiments/: mle.py
experiments/data/: download_data.py  download_original_datasets.py  download_results.py
experiments/data/subsampling/: subsample_f1.py  subsample_walmart.py
experiments/evaluation/: benchmark.py  benchmark_single_table.py  mle.py  utility.py  visualize_results.py
experiments/evaluation/gnn_utility/: gnn_datasets.py  gnn_node.py  model.py  requirements.txt  run_baseline.py  run_baseline_benchmark.py  run_gnn.py  run_lightgbm.py  run_utility_benchmark.py
experiments/figures/: figure1.py  figure2.py  figure3.py  figure4.py  figure5.py  figure6.py  figure7.py  xgb_logistic_example.py
experiments/generation/clavaddpm/: generate_clavaddpm.sh  postprocess_dataset.py  prepare_dataset.py  requirements.txt
experiments/generation/gretel/: README.md  generate_gretel.py  requirements.txt
experiments/generation/mostlyai/: README.md  generate_mostlyai.py  requirements.txt
experiments/generation/rctgan/: convert_metadata_to_v0.py  generate_rctgan.py  requirements.txt
experiments/generation/realtabformer/: .gitignore  generate_realtabformer.py  requirements.txt
experiments/generation/sdv/: generate_sdv.py
experiments/generation/tabular/: generate_tabular.py  requirements.txt
experiments/reproducibility/: download_data_and_results.sh  evaluate_relational.sh  evaluate_relational_tmux.sh  evaluate_tabular.sh  evaluate_utility.sh  generate.sh  generate_figures.sh  generate_tables.sh
experiments/reproducibility/data/: download_data.sh
experiments/reproducibility/figures/: figure2.py  figure5.py  figure6.py
experiments/reproducibility/generation/: generate_mostlyai.sh  generate_rctgan.sh  generate_realtabformer.sh  generate_sdv.sh  generate_tabular.sh
experiments/tables/: fidelity.py  fidelity_utility_correlation.py  gnn_utility.py  utility.py
licenses/: README.md
relsyndgb/: base.py  benchmark.py  data.py  metadata.py  report.py  utils.py
relsyndgb/metrics/: base.py  utility.py
relsyndgb/metrics/multi_table/detection/: __init__.py  aggregation_detection.py  denormalized_detection.py  parent_child.py
relsyndgb/metrics/multi_table/statistical/: cardinality_shape_similarity.py
relsyndgb/metrics/single_column/detection/: single_column_detection.py
relsyndgb/metrics/single_column/distance/: __init__.py  hellinger_distance.py  jensen_shannon_distance.py  total_variation_distance.py  utils.py  wasserstein_distance.py
relsyndgb/metrics/single_column/statistical/: __init__.py  chi_square_test.py  (+1 more)
relsyndgb/reports/: __init__.py  base_report.py
relsyndgb/single_column/distance/: hellinger_distance.py
relsyndgb/single_column/statistical/: chi_square_test.py
relsyndgb/visualisations/: distribution_visualisations.py  multi_table_visualisations.py  single_column_visualisations.py  single_table_visualisations.py  utils.py
syntherela/: __init__.py  benchmark.py  data.py  metadata.py  report.py  typing.py  utils.py
syntherela/metrics/: __init__.py  base.py  utility.py
syntherela/metrics/multi_table/: __init__.py
syntherela/metrics/single_column/: README.md  __init__.py
syntherela/metrics/single_table/: __init__.py
syntherela/visualisations/: __init__.py  distribution_visualisations.py  multi_table_visualisations.py  single_column_visualisations.py  single_table_visualisations.py  utils.py
tests/: requirements.txt  test_benchmark.py  test_data.py  test_metadata.py  test_report.py  test_utils.py
tests/data/: data_generators.py
(+35 files in other folders)
